--- a/html/assets/css/commons.css
+++ b/html/assets/css/commons.css
@@ -40,10 +40,11 @@ body.windows {
     margin: 0 auto;
 }
 
-/* 보더 설정 */
+/* border style */
 .bmStyle {
     border-bottom: 3px solid var(--color__black);
     position: relative;
+    margin-bottom: 5px;
 }
 .bmStyle::after {
     content: '';
@@ -58,14 +59,34 @@ body.windows {
     border-top: 3px solid var(--color__black);
     position: relative;
 }
-.btStyle::after {
+.btStyle::before {
     content: '';
     width: 100%;
     height: 1px;
     position: absolute;
     left: 0;
-    bottom: -8px;
+    top: -8px;
     background-color: var(--color__black);
+}
+
+/* btn style */
+.btnStyle {
+    display: block;
+    background-color: var(--bg__black);
+    color: var(--color__white);
+    margin: 5em auto;
+    font-size: 1.2em;
+    padding: 0.5em 3em;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.btnStyle2 {
+    width: 100%;
+    font-size: 1.2rem;
+    background-color: var(--color__black);
+    color: var(--color__white);
+    border-radius: 5px;
+    padding: 0.5em;
 }
 
 /* 간격설정 */
@@ -84,6 +105,60 @@ body.windows {
 .mb50 {margin-bottom: 50px !important;}
 .mb60 {margin-bottom: 70px !important;}
 .mb70 {margin-bottom: 60px !important;}
+
+
+/* input style */
+.inputStyle {
+    background-color: #f5f5f5;
+    width: 100%;
+    border-radius: 5px;
+    padding: 1em 2em;
+    border: 0;
+    font-weight: 300;
+}
+
+/* label style */
+label {
+    display: block;
+    margin-bottom: 2px;
+    font-size: 1.2em;
+}
+label.required::after {
+    content: ' *';
+    color: red;
+}
+
+/* listStyle */
+.listStyle li {
+    padding-left: 16px;
+    position: relative;
+}
+.listStyle li::before {
+    content: '';
+    width: 6px;
+    height: 6px;
+    background-color: var(--color__black);
+    position: absolute;
+    border-radius: 50%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.listStyle2 li {
+    padding-left: 20px;
+    position: relative;
+}
+.listStyle2 li::before {
+    content: '';
+    width: 5px;
+    height: 5px;
+    background-color: var(--color__black);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
 /* media */
 @media (max-width : 1300px){
