--- a/html/assets/css/layout.css
+++ b/html/assets/css/layout.css
@@ -106,6 +106,17 @@
     color: var(--color__white);
 }
 
+/* footer__inner */
+.footer__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* padding: 100px 0; */
+    font-size: 14px;
+    color: #666;
+    padding-top: 5px;
+}
+
 /* media */
 @media (max-width: 600px){
     .header__inner .left{
