--- a/html/assets/css/resets.css
+++ b/html/assets/css/resets.css
@@ -42,12 +42,20 @@ input,
 select,
 table,
 textarea {
-    font-family: var(--main__font), 'AppleSDGothicNeo-Regular', 'Malgun Gothic', '맑은 고딕', 'dotum', '돋움';
+    font-family: var(--main__win), 'AppleSDGothicNeo-Regular', 'Malgun Gothic', '맑은 고딕', 'dotum', '돋움';
     font-weight: 500;
     font-size: 1rem;
     line-height: 1.5;
     word-break: keep-all;
 }
+body.windows button,
+body.windows input,
+body.windows select,
+body.windows table,
+body.windows textarea {
+    font-family: var(--main__win);
+}
+
 
 /* 링크 초기화 */
 a {
@@ -63,6 +71,13 @@ li, ol, ul {
 h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     font-size: var(--font__size);
+}
+
+/* 테이블 초기화 */
+table {
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
 }
 /* 폰트 스타일 */
 em, address {
