--- a/php2/html/assets/css/style.css
+++ b/php2/html/assets/css/style.css
@@ -21,7 +21,7 @@
 /* main */
 @import "main.css";
 
-/* mainheader */
-@import "mainheader.css";
+/* header */
+@import "header.css";
 /* footer */
 @import "footer.css";
