--- a/php2/html/assets/css/commons.css
+++ b/php2/html/assets/css/commons.css
@@ -73,6 +73,11 @@ body.windows {
     top: -8px;
     background-color: var(--color__black);
 }
+.abbStyle {
+    /* width: 100%;
+    height: 1px; */
+    border-bottom: 1px solid var(--color__black);
+}
 
 /* btn style */
 .btnStyle {
@@ -101,8 +106,8 @@ body.windows {
     height: 40px;
     margin-bottom: 25px;
     color: #fff;
-    background-color: #7E7E7E;
-    border: 1px solid #7e7e7e;
+    background-color: #F06171;
+    border: 1px solid #F06171;
     border-radius: 5px;
     font-size: 16px;
 }
