--- a/php2/html/assets/css/joinEnd.css
+++ b/php2/html/assets/css/joinEnd.css
@@ -1,12 +1,8 @@
 /* join__inner */
 .joinEnd__inner {
-    padding: 5% 0;
+    padding: 80px 0;
 }
-.joinEnd__inner h2 {
-    font-size: 30px;
-    text-align: center;
-    background-color: #000;
-}
+
 .joinEnd__form {
     padding: 5% 8% 0% 8%;
     margin-bottom: 50px;
@@ -28,10 +24,15 @@
     margin-bottom: 2px;
     font-size: 1.2em;
 }
-.joinEnd__text {
+.joinEnd__h2 {
     font-size: 30px;
     text-align: center;
-    margin-top: 40px;
+}
+
+.joinEnd__p{
+    font-size: 1.2em;
+
+    text-align: center;
 }
 
 /* media */
