--- a/php2/html/assets/css/commons.css
+++ b/php2/html/assets/css/commons.css
@@ -112,7 +112,9 @@ body.windows {
     font-size: 16px;
 }
 
-
+.white{
+    background-color: #fff;
+}
 
 /* .btnStyle3{
     display: inline-block;
