--- a/php2/html/assets/css/style.css
+++ b/php2/html/assets/css/style.css
@@ -25,3 +25,9 @@
 @import "header.css";
 /* footer */
 @import "footer.css";
+
+/* board 공지사항 */
+@import "notice.css";
+
+/* FAQ */
+@import "faq.css"
