--- a/html/assets/css/join.css
+++ b/html/assets/css/join.css
@@ -81,7 +81,7 @@
     color: var(--bg__red);
 }
 .join__form .msg::before {
-    content: '* ';
+    /* content: '* '; */
 }
 
 .join__agree {
@@ -104,8 +104,12 @@
 }
 .agree__check {
     display: flex;
-    width: 100%;
-    margin-left: 16.3%;
+    width: 850px;
+    /* margin-left: 16.3%; */
+    /* margin-bottom: 60px; */
+    margin: 0 auto;
+}
+.checkbox {
     margin-bottom: 60px;
 }
 .agree__check > p {
